Add a search option to easily find contacts in the new contact list [fixed] Add a panel with contacts [in progress]

--- a/data/assets/css/panel.css
+++ b/data/assets/css/panel.css
@@ -1173,6 +1173,9 @@ ul.menu li i:before {
 .widget-content ul {
   margin: 0;
   padding: 0;
+
+  max-height: 258px;
+  overflow: auto;
 }
 .widget-content ul li {
   cursor: pointer;
