Add a panel with contacts Use timer properly to fetch queue information Login screen after changed credentials Keyboard actions in the plugin [in progress] Other fixes in code

--- a/data/assets/css/panel.css
+++ b/data/assets/css/panel.css
@@ -1158,6 +1158,7 @@ ul.menu li i:before {
   line-height: 40px;
   margin: 0;
   padding: 0 10px;
+  -moz-user-select: none;
 }
 .widget .widget-header h3 i {
   display: block;
