--- a/data/assets/less/panel.less
+++ b/data/assets/less/panel.less
@@ -27,15 +27,72 @@ body {
     font: 13px/1.7em 'Open Sans';
 }
 
+input[type="text"],
+input[type="password"],
+input[type="search"] {
+    border: 1px solid #d5d5d5;
+    border-radius: 2px;
+    height: 32px;
+    padding: 0 12px;
+    -moz-box-sizing:border-box;
+}
+
 div.account {
     padding: 10px;
+    line-height: 19px;
     i {
         display: block;
         float: left;
         font-size: 21px;
 
-        margin-right: 9px;
-        margin-left: 2px;
+        margin-left: 9px;
+        margin-right: 2px;
+    }
+    .pull-right {
+        float: right;
+        margin-top: 1px;
+    }
+    #user-name {
+        overflow: hidden;
+        white-space: nowrap;
+        width: calc(~"100% - 120px");
+        display: inline-block;
+        text-overflow: ellipsis;
+    }
+    #logout {
+        font-size: 11px;
+        cursor: pointer;
+        font-weight: bold;
+        float: left;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+
+    #account-form {
+        label {
+            font-weight: bold;
+            display: block;
+            margin-bottom: 4px;
+        }
+        button,
+        input[type="text"],
+        input[type="password"] {
+            width: 100%;
+            margin-bottom: 7px;
+        }
+        button {
+            background: @darkText;
+            color: white;
+            border: none;
+            height: 40px;
+            display: block;
+            margin-top: 5px;
+            border-radius: 4px;
+            &:hover {
+                background: darken(@darkText,4%);
+            }
+        }
     }
 }
 
