--- a/data/assets/less/panel.less
+++ b/data/assets/less/panel.less
@@ -34,6 +34,7 @@ input[type="search"] {
     border-radius: 2px;
     height: 32px;
     padding: 0 12px;
+    box-sizing:border-box;
     -moz-box-sizing:border-box;
 }
 
