--- a/data/assets/css/panel.css
+++ b/data/assets/css/panel.css
@@ -55,13 +55,13 @@ html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   /* 2 */
-
 }
 /*
  * Removes default margin.
  */
 body {
   margin: 0;
+  width: 360px;
 }
 /* ==========================================================================
    Links
